tests/ui/fail/compile_error_in_predicate.rs
use contracts::requires;

#[requires(compile_error!("predicate should be a boolean expression"))]
fn broken_predicate() {}

fn main() {
    broken_predicate();
}
